Revision history for Dist-Zilla-PluginBundle-DAGOLDEN

{{$NEXT}}

0.049     2013-09-06 12:09:09 America/New_York

    [INCOMPATIBLE CHANGE]

    - Replaced AutoMetaResources with GithubMeta to support
      non-lowercase repository names

    [ADDED]

    - Added github_issues attribute (defaulting to set issues to GH)

    [PREREQS]

    - Bumped minimum Test::Compile to 2.023

0.048     2013-08-29 11:04:05 America/New_York

    - Bumped minimum Test::Compile to 2.022

0.047     2013-07-18 10:20:54 America/New_York

    - Add 'authority' config option to drive the Authority plugin
      (no file munging is done, just the META.* files are affected)

0.046     2013-06-30 21:14:06 America/New_York

    - Add PluginRemover for easy disabling of plugins

0.045     2013-06-06 15:41:29 America/New_York

    - Add 'no_minimum_perl' parameter

0.044     2013-03-26 15:47:58 America/New_York

    - Add Encoding plugin to Pod::Weaver

0.043     2013-03-02 23:08:40 America/New_York

    - Add Test::MinimumVersion with default perl of 5.010

0.042     2013-02-27 10:19:05 America/New_York

    - Add ContributorsFromGit plugin and Contributors Pod Weaver section

0.041     2013-02-21 16:14:21 America/New_York

    - Make 'no_critic' work as advertised

0.040     2013-02-13 09:32:02 America/New_York

    - Add 'no_git' option to bypass git-related plugins

0.039     2013-02-11 13:17:21 America/New_York

    - Replace buggy ReadmeFromPod with another invocation of
      ReadmeAnyFromPod

0.038     2013-02-11 12:16:15 America/New_York

    - Add [Test::ReportPrereqs]

0.037     2013-01-30 14:51:07 America/New_York

    - tweaked Pod::Weaver settings.  Reordered "=func" sections.
      Added "=usage" and "=construct" as new collectors

0.036     2013-01-22 06:20:57 America/New_York

    - add no_coverage option

0.035     2013-01-16 15:20:10 America/New_York

    - don't check files for multiple dots

0.034     2012-12-26 11:49:57 America/New_York

    - fixed typo [BOOK]
