@@ -1,139 +1,0 @@
-{
-   "abstract" : "Dist::Zilla configuration the way DAGOLDEN does it",
-   "author" : [
-      "David Golden <dagolden@cpan.org>"
-   ],
-   "dynamic_config" : 0,
-   "generated_by" : "Dist::Zilla version 4.300037, CPAN::Meta::Converter version 2.132140",
-   "license" : [
-      "apache_2_0"
-   ],
-   "meta-spec" : {
-      "url" : "http://search.cpan.org/perldoc?CPAN::Meta::Spec",
-      "version" : "2"
-   },
-   "name" : "Dist-Zilla-PluginBundle-DAGOLDEN",
-   "no_index" : {
-      "directory" : [
-         "t",
-         "xt",
-         "examples",
-         "corpus"
-      ],
-      "package" : [
-         "DB"
-      ]
-   },
-   "prereqs" : {
-      "configure" : {
-         "requires" : {
-            "ExtUtils::MakeMaker" : "6.30"
-         }
-      },
-      "develop" : {
-         "requires" : {
-            "Pod::Coverage::TrustPod" : "0",
-            "Test::CPAN::Meta" : "0",
-            "Test::Pod" : "1.41",
-            "Test::Pod::Coverage" : "1.08"
-         }
-      },
-      "runtime" : {
-         "requires" : {
-            "Dist::Zilla" : "4.3",
-            "Dist::Zilla::Plugin::Authority" : "1.006",
-            "Dist::Zilla::Plugin::Bugtracker" : "1.110",
-            "Dist::Zilla::Plugin::CheckChangesHasContent" : "0",
-            "Dist::Zilla::Plugin::CheckExtraTests" : "0",
-            "Dist::Zilla::Plugin::CheckMetaResources" : "0.001",
-            "Dist::Zilla::Plugin::CheckPrereqsIndexed" : "0.002",
-            "Dist::Zilla::Plugin::ContributorsFromGit" : "0.004",
-            "Dist::Zilla::Plugin::CopyFilesFromBuild" : "0",
-            "Dist::Zilla::Plugin::Git::NextVersion" : "0",
-            "Dist::Zilla::Plugin::GithubMeta" : "0.36",
-            "Dist::Zilla::Plugin::InsertCopyright" : "0.001",
-            "Dist::Zilla::Plugin::MetaNoIndex" : "0",
-            "Dist::Zilla::Plugin::MetaProvides::Package" : "1.14",
-            "Dist::Zilla::Plugin::MinimumPerl" : "0",
-            "Dist::Zilla::Plugin::OurPkgVersion" : "0.004",
-            "Dist::Zilla::Plugin::PodWeaver" : "0",
-            "Dist::Zilla::Plugin::ReadmeAnyFromPod" : "0.120051",
-            "Dist::Zilla::Plugin::TaskWeaver" : "0.101620",
-            "Dist::Zilla::Plugin::Test::Compile" : "2.023",
-            "Dist::Zilla::Plugin::Test::MinimumVersion" : "2.000003",
-            "Dist::Zilla::Plugin::Test::Perl::Critic" : "0",
-            "Dist::Zilla::Plugin::Test::PodSpelling" : "2.006000",
-            "Dist::Zilla::Plugin::Test::Portability" : "0",
-            "Dist::Zilla::Plugin::Test::ReportPrereqs" : "0",
-            "Dist::Zilla::Plugin::Test::Version" : "0",
-            "Dist::Zilla::PluginBundle::Filter" : "0",
-            "Dist::Zilla::PluginBundle::Git" : "1.121010",
-            "Dist::Zilla::Role::PluginBundle::Config::Slicer" : "0",
-            "Dist::Zilla::Role::PluginBundle::Easy" : "0",
-            "Dist::Zilla::Role::PluginBundle::PluginRemover" : "0",
-            "Moose" : "0.99",
-            "Moose::Autobox" : "0",
-            "Pod::Elemental::Transformer::List" : "0.101620",
-            "Pod::Weaver" : "3.101635",
-            "Pod::Weaver::Config::Assembler" : "0",
-            "Pod::Weaver::Plugin::Encoding" : "0",
-            "Pod::Weaver::Plugin::WikiDoc" : "0",
-            "Pod::Weaver::Section::Contributors" : "0.001",
-            "Pod::Weaver::Section::Support" : "1.001",
-            "Pod::Wordlist::hanekomu" : "1.121370",
-            "Test::Portability::Files" : "0.06",
-            "autodie" : "2.00",
-            "namespace::autoclean" : "0.09",
-            "perl" : "5.008001",
-            "strict" : "0",
-            "warnings" : "0"
-         }
-      },
-      "test" : {
-         "requires" : {
-            "ExtUtils::MakeMaker" : "0",
-            "File::Spec::Functions" : "0",
-            "File::Temp" : "0",
-            "File::pushd" : "0",
-            "IO::Handle" : "0",
-            "IPC::Open3" : "0",
-            "List::Util" : "0",
-            "Path::Tiny" : "0",
-            "Test::DZil" : "0",
-            "Test::More" : "0.96",
-            "perl" : "5.008001"
-         }
-      }
-   },
-   "provides" : {
-      "Dist::Zilla::PluginBundle::DAGOLDEN" : {
-         "file" : "lib/Dist/Zilla/PluginBundle/DAGOLDEN.pm",
-         "version" : "0.049"
-      },
-      "Pod::Weaver::PluginBundle::DAGOLDEN" : {
-         "file" : "lib/Pod/Weaver/PluginBundle/DAGOLDEN.pm",
-         "version" : "0.049"
-      }
-   },
-   "release_status" : "stable",
-   "resources" : {
-      "bugtracker" : {
-         "web" : "https://github.com/dagolden/dist-zilla-pluginbundle-dagolden/issues"
-      },
-      "homepage" : "https://github.com/dagolden/dist-zilla-pluginbundle-dagolden",
-      "repository" : {
-         "type" : "git",
-         "url" : "https://github.com/dagolden/dist-zilla-pluginbundle-dagolden.git",
-         "web" : "https://github.com/dagolden/dist-zilla-pluginbundle-dagolden"
-      }
-   },
-   "version" : "0.049",
-   "x_authority" : "cpan:DAGOLDEN",
-   "x_contributors" : [
-      "Christian Walde <walde.christian@googlemail.com>",
-      "Eric Johnson <eric.git@iijo.org>",
-      "Karen Etheridge <ether@cpan.org>",
-      "Philippe Bruhat (BooK) <book@cpan.org>"
-   ]
-}
-
